# temp

./: Makefile.linux.mk  Makefile.macos.mk  Makefile.sdk.mk  Makefile.toolchain.mk  README.md  cateyes.sln  config.mk  instruments.txt  log.txt
capstone/: Makefile  capstone-32.vcxproj  capstone-32.vcxproj.filters  capstone-64.vcxproj  capstone-64.vcxproj.filters  capstone-common.props
cateyes-clr/: cateyes-clr.vcxproj
cateyes-clr/src/: Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Marshal.cpp  Marshal.hpp  Process.cpp  Process.hpp  Runtime.cpp  Runtime.hpp  Script.cpp  Script.hpp  Session.cpp  Session.hpp
cateyes-core/: .gitignore  cateyes-core.vcxproj  cateyes-core.vcxproj.filters  cateyes-gadget.vcxproj  cateyes-server.vcxproj  meson.build  meson_options.txt
cateyes-core/inject/: inject-glue.c  inject-glue.h  inject.vala  meson.build
cateyes-core/server/: cateyes-server.plist  meson.build  server-darwin.h  server-darwin.m  server-glue.c  server-glue.h  server-ios-jit.c  server-ios-jit.defs  server-ios-jit.h  server-ios.c  server-ios.h  server.vala  sign.sh
cateyes-core/src/: agent-container.vala  agent.resources  cateyes-glue.c  cateyes.vala  debugger.vala  embed-agent.sh  host-session-service.vala  loader.resources  meson.build  system.vala
cateyes-core/src/api/: generate.py  merge.sh  meson.build
cateyes-core/src/darwin/: cateyes-darwin.resources  cateyes-helper-backend-glue.m  cateyes-helper-backend.vala  cateyes-helper-process.vala  cateyes-helper-service-glue.h  cateyes-helper-service-glue.m  cateyes-helper-service.vala  cateyes-helper-types.vala  cateyes-helper.plist  darwin-host-session-glue.m  darwin-host-session.vala  embed-helper.sh  fruitjector.vala  icon-helpers.h  icon-helpers.m  policy-softener.vala  port-glue.m  port.vala  springboard.h  springboard.m  system-darwin.m
cateyes-core/src/droidy/: droidy-client.vala  droidy-host-session.vala
cateyes-core/src/fruity/: fruity-client.vala  fruity-host-session-darwin.m  fruity-host-session-unix.c  fruity-host-session-windows.c  fruity-host-session.vala  fruity-property-list.vala
cateyes-core/src/linux/: cateyes-android.resources  cateyes-helper-process.vala  cateyes-helper-service-glue.c  cateyes-helper-service.vala  cateyes-helper-types.vala  cateyes-helper.vala  embed-helper.sh  linjector-glue.c  linjector.vala  linux-host-session.vala  supersu.vala  system-linux.c
cateyes-core/src/qnx/: qinjector-glue.c  qinjector.vala  qnx-host-session.vala  system-qnx.c
cateyes-core/src/tcp/: tcp-host-session.vala
cateyes-core/src/windows/: access-helpers.c  access-helpers.h  icon-helpers.c  icon-helpers.h  system-windows.c  windows-host-session-glue.c  windows-host-session.vala  winjector-glue.c  winjector-helper-32.vcxproj  winjector-helper-64.vcxproj  winjector-helper-common.props  winjector-helper-core.c  winjector-helper-services.c  winjector-helper.vala  winjector-types.vala  winjector.resources  winjector.vala
cateyes-core/tests/: async-harness.vala  cateyes-tests.plist  cateyes-tests.vcxproj  labrats.vala  main.vala  meson.build  process-resource-usage.c  process-unix.c  process-windows.c  process.vala  run-android-arm.sh  run-android-arm64.sh  run-android-x86.sh  run-android-x86_64.sh  run-ios.sh  run-linux-x86_64.sh  run-macos.sh  runner-glue.c  runner.vala  sign.sh  test-agent-glue.c  test-agent.vala  test-gadget.vala  test-host-session.vala  test-injector.vala  test-system.vala
cateyes-core/tests/labrats/: Makefile.android-arm.mk  Makefile.android-arm64.mk  Makefile.android-x86.mk  Makefile.android-x86_64.mk  Makefile.qnx.mk  agent.def  resident-agent.c  simple-agent.c
cateyes-core/tests/pipe/: main.c  pipe-test.vcxproj
cateyes-core/tools/: cateyes-resource-compiler.vcxproj  meson.build  package-server.sh  resource-compiler.vala
cateyes-gum/: gum-32.vcxproj  gum-32.vcxproj.filters  gum-64.vcxproj  gum-64.vcxproj.filters  gum-common.props  meson.build
cateyes-gum/gum/: gumprintf.c  meson.build
cateyes-gum/tests/: gum-tests.plist  gum-tests.vcxproj  run-android-arm.sh  run-android-arm64.sh  run-android-x86.sh  run-ios.sh  run-linux-x86_64.sh  run-macos.sh  sign.sh  testutil.c
cateyes-gum/vapi/: meson.build
cateyes-node/: README.md  binding.gyp  binding.version  package-lock.json  package.json
cateyes-node/examples/: add_remote_device.js  blocking_receives.js  bytecode.js  calling_functions.js  child_gating.js  detached.js  enumerate_applications.js  get_frontmost_application.js  hook_function.js  interactive.js  modify_arguments.js  rpc.js  (+4 more)
cateyes-python/: README.md  cateyes-python-common.props  cateyes-python27.vcxproj  cateyes-python27.vcxproj.filters  cateyes-python36.vcxproj  cateyes-python36.vcxproj.filters  meson.build  setup.py
cateyes-python/src/: _cateyes.c  _cateyes.version  meson.build
cateyes-qml/: cateyes-qml.pro  cateyes-qml.qmltypes  cateyes-qml.version  cateyes.cpp  cateyes.h  device.cpp  device.h  devicelistmodel.cpp  devicelistmodel.h  iconprovider.cpp  iconprovider.h  maincontext.h  plugin.cpp  plugin.h  process.cpp  process.h  processlistmodel.cpp  processlistmodel.h  qmldir  script.h
cateyes-swift/: README.md
cateyes-tools/: README.md  meson.build  setup.py
cateyes-tools/scripts/: cateyes-discover.in  cateyes-kill.in  cateyes-ls-devices.in  cateyes-ps.in  cateyes-trace.in  cateyes.in  meson.build
elfutils/: configure  configure.ac
glib/: Makefile.in  aclocal.m4  config.h.in~  configure  deploy.bat  glib-common.props
json-glib/: json-glib.hsproj
libffi/: Makefile.in  aclocal.m4  configure  configure.ac  fficonfig.h.win32.in  libffi.hsproj  libffi.pc.in
libgee/: Makefile.in  aclocal.m4  configure  configure.ac  gee.hsproj  ltmain.sh
libunwind/: Makefile.cateyes.mk  Makefile.in  aclocal.m4  configure
releng/: cateyes-Debug.props  cateyes-Release.props  cateyes-builddeps.vcxproj  cateyes.props  common.mk  config.site.in  cxx-wrapper-linux.sh  cxx-wrapper-qnx.sh  devkit.py  generate-version-header.py  release.py  relocatify.sh  setup-env.sh  windows-sdk.txt  windows-toolchain.txt
xz/: Makefile.in  aclocal.m4  configure
(+317 files in other folders)
